# learngit

./: README.md  readme.txt  test.txt
ESP32-master/: Makefile  sdkconfig  sdkconfig.old
ESP32-master/components/http_request/: http_request.c
components/esp_http_client/: esp_http_client.c
components/tcp_transport/: transport_tcp.c
design/ble_mesh_provisioner/main/: ble_mesh_demo_main.c
design/hx-wifi/: sdkconfig
design/onoff_server/: sdkconfig
examples/design/hx-oled/: sdkconfig.old
examples/sunwin/: suanfa.c
my-project/esp_http_client/: sdkconfig
my-project/hx-sht30/: sdkconfig
my-project/hx-sht30/main/: hx_sht30.c
my-project/hx-uart_zh03/: sdkconfig  sdkconfig.old
sunwin/AD7705/: sdkconfig  sdkconfig.old
sunwin/adc1_suanfa_time_low_power_ota/: sdkconfig
sunwin/adc1_suanfa_time_low_power_ota_ceshi/: CMakeLists.txt
sunwin/adc2/: sdkconfig
sunwin/esp-aliyun_sunwin/examples/ota/Adult_AVG_test/main/: CMakeLists.txt  app_main.c  component.mk
sunwin/esp-aliyun_sunwin/examples/ota/Adult_AVG_test/main/Algorithm/: ahu_respirate.h  ahu_utils.c
sunwin/esp-aliyun_sunwin/examples/ota/all_function/main/: CMakeLists.txt  adc2_example_main.c
sunwin/esp-aliyun_sunwin/examples/ota/all_function/main/ahu_sleep/gsl-1.15/include/gsl/: gsl_poly.h
sunwin/esp-aliyun_sunwin/examples/ota/all_function/main/ahu_sleep/include/: ahu_respirate.h  ahu_utils.h
sunwin/old_man/process/SendToWang_20200414(1)/SendToWang_20200414/components/sleep_monitoring/: CMakeLists.txt  Kconfig  component.mk
sunwin/old_man/process/SendToWang_20200414(1)/SendToWang_20200414/components/sleep_monitoring/include/: ahu_dsp.h  ahu_respirate.h  ahu_utils.h  eemd.h  emd.h
sunwin_my/sntp/: sdkconfig
udp_client_sht30/: sdkconfig  sdkconfig.old
udp_client_sht30(复件)/: sdkconfig  sdkconfig.old
udp_client_sht30(复件)/main/: udp_client.c
udp_client_sht30/main/: udp_client.c
udp_server/: sdkconfig  sdkconfig.old
udp_server/main/: udp_server.c
(+175 files in other folders)
